# MSNoise

./: .coveragerc  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  00.0.installer.py  00.1.configurator.py  00.2.populate_station_table.py  01.scan_archive.py  02.new_jobs.py  03.compute_cc.py  04.stack.py  05.compute_mwcs.py  06.compute_dtt.py  07.plot_dtt.py  ARCHITECTURE.md  CHANGELOG.txt  CONTRIBUTORS.txt  MANIFEST.in  MWCS.py  README.md  Venenorosmd@msn.com  __init__.py  appveyor.yml  bugreport.py  cron.sh  data_structures.py  database_tools.py  default.py  msnoise-admin.py  msnoise_table_def.py  myCorr.py  plot_dataavailability.py  pyproject.toml  results.py  s000installer.py  s001configurator.py  s002populate_station_table.py  s01scan_archive.py  s02new_jobs.py  (+10 more)
.github/: environment.yml
.github/workflows/: build_doc.yml  first_action_test.yml  publish.yml  test_full.yml  test_smoke.yml
doc/: Makefile  about_db_performances.rst  api.rst  conf.py  configs.hrst  contributors.rst  core.rst  how_tos.rst  index.rst  installation.rst  make.bat  plotting.rst  plugins.rst  references.rst  releasenotes.rst  requirements.txt  results.rst  table_def.rst  todos.rst  troubleshooting.rst  workflow.rst  workflow_concepts.rst
doc/.static/: msnoise.css  my-styles.css
doc/.templates/: layout.html
doc/clickhelp/: msnoise.rst
doc/pyplots/: corr.py
doc/releasenotes/: msnoise-1.0.rst  msnoise-1.2.1.rst  msnoise-1.2.2.rst  msnoise-1.2.3.rst  msnoise-1.2.4.rst  msnoise-1.2.5.rst  msnoise-1.2.rst  msnoise-1.3.1.rst  msnoise-1.3.rst  msnoise-1.4.rst  msnoise-1.5.rst  msnoise-1.6.1.rst  msnoise-1.6.rst  msnoise-2.0.rst
doc/workflow/: 0000_intro.rst  000_installer.rst  001_msnoise_admin.rst  003_scan_archive.rst  005_compute_cc.rst  006_stack.rst
doc/workflow_000/: 0000_intro.rst  000_installer.rst  002_populate.rst  002b_plot_station_map.rst  003_scan_archive.rst  003b_plot_data_availability.rst  004_new_jobs.rst  005_configsets.rst
doc/workflow_ccf/: 0000_intro.rst  004b_preprocess.rst  005_compute_cc.rst  005b_plot_ccftime.rst  006_stack.rst  006b_plot_distance.rst  006b_stack_refstack.rst  006c_stack_refstack.rst
doc/workflow_dvv/: 0000_intro.rst  007_compute_mwcs.rst  007b_plot_mwcs.rst  008_compute_dtt.rst  008b_plot_mwcs_dtt_timing.rst  009_compute_dvv.rst  009b_compute_wct_dtt.rst  009b_plot_dvv.rst  010_compute_dvv.rst  010_compute_wct.rst  010b_compute_wct_dtt.rst  010b_plot_wct.rst  010c_plot_wct.rst  010d_compute_wct_dtt_dvv.rst  011_compute_stretching.rst  011b_plot_stretching.rst  011c_compute_stretching_dvv.rst  012_compute_wct.rst
doc/workflow_psd/: 0000_intro.rst  009_compute_psd.rst  010_compute_psd_rms.rst  010_plot_psd.rst  010b_plot_psd_rms.rst  011_psd_to_hdf.rst  012_hdf_to_rms.rst  013_export_rms.rst
examples/: README.rst  nb_cc_vs_pcc.py  nb_psd_rms_multistation.py  nb_psd_rms_quickstart.py  plot_cc_vs_pcc.py  plot_compute_hvsr.py  plot_compute_hvsr_psd.py  plot_dvv_comparison.py  plot_interferogram.py  plot_ref.py
misc/: install_debian_x86_64.sh
msnoise/: .coveragerc  MWCS.py  __init__.py  _version.py  api.py  api_connection.py  bugreport.py  config.py  data_structures.py  database_tools.py  db.py  default.csv  default.py  io.py  move2obspy.py  msnoise_admin.py  msnoise_table_def.py  myCorr.py  params.py  ppsd_compute.py  preprocessing.py  psd_compute.py  psd_compute_rms.py  psd_export_rms.py  psd_to_hdf.py  results.py  s000installer.py  s001configurator.py  s002populate_station_table.py  s00_installer.py  s00_populate_station_table.py  s01_scan_archive.py  s01scan_archive.py  s02_new_jobs.py  s02_preprocessing.py  s02new_jobs.py  s03_compute_no_rotation.py  s03compute_cc.py  s03compute_no_rotation.py  s04_stack2.py  (+35 more)
msnoise/config/: config_cc.csv  config_filter.csv  config_global.csv  config_mwcs.csv  config_mwcs_dtt.csv  config_mwcs_dtt_dvv.csv  config_preprocess.csv  config_psd.csv  config_psd_rms.csv  config_qc.csv  config_refstack.csv  config_stack.csv  config_stretching.csv  config_stretching_dvv.csv  config_wavelet.csv  config_wavelet_dtt.csv  config_wavelet_dtt_dvv.csv  config_wct_dtt_dvv.csv
msnoise/core/: __init__.py  compute.py  config.py  db.py  fdsn.py  io.py  preprocessing.py  signal.py  stations.py  workflow.py
msnoise/plots/: aurelogram.py  ccf_freq.py  ccffreq.py  ccftime.py  data_availability.py  distance.py  dtt.py  dvv.py  dvvs.py  interferogram.py  mwcs.py  mwcs_dtt.py  mwcs_dtt_dvv.py  ppsd.py  psd_rms.py  spectime.py  station_map.py  stretching_dvv.py  timing.py  wavelet_dtt_dvv.py  wct_dvv.py  wct_dvv2.py
msnoise/plugins/: __init__.py
msnoise/scripts/: msnoise.py
msnoise/test/: content_tests.py  run_tests.sh  test_api.py  test_msnoise_table_def.py  test_smoke.py  tests-threecomponent.py  tests.py
msnoise/unused/: s03compute_cc.py  s04_stack2.py
static/admin/: bokeh-0.4.4.js  msnoise.css  style.css
templates/: index.html
templates/admin/: about.html  base.html  bugreport.html  data_availability.html  (+5 more)
tests/: test_pcc.py
(+33 files in other folders)
