[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "msnoise"
dynamic = ["version"]
description = "A Python Package for Monitoring Seismic Velocity Changes using Ambient Seismic Noise"
readme = "README.md"
license = { text = "EUPL-1.1" }
authors = [
    { name = "Thomas Lecocq & MSNoise dev team", email = "Thomas.Lecocq@seismology.be" }
]
requires-python = ">=3.10"

keywords = [
    "noise", "monitoring", "seismic", "velocity", "change",
    "dvv", "dtt", "doublet", "stretching", "cross-correlation", "acoustics", "seismology"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics"
]

dependencies = [
    "setuptools",
    "numpy>=1.0",
    "scipy",
    "pandas",
    "matplotlib",
    "sqlalchemy",
    "sqlalchemy-utils",
    "obspy",
    "click",
    "click-plugins",
    "click-command-tree",
    "pymysql",
    "flask",
    "flask-admin<2",
    "flask_babel",
    "flask-wtf",
    "markdown",
    "folium",
    "wtforms<3.2",
    "jinja2",
    "scandir",
    "logbook",
    "xarray",
    "pooch",
    "pycwt",
    "pytest",
    "pytest-order"
]

[project.optional-dependencies]
doc = [
    "sphinx",
    "sphinx_bootstrap_theme",
    "numpydoc",
    "sphinx_gallery"
]

[project.scripts]
msnoise = "msnoise.scripts.msnoise:run"

[project.urls]
Homepage = "http://www.msnoise.org"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["msnoise", "msnoise.*"]
exclude = ["msnoise.test", "msnoise.test.*", "msnoise.unused", "msnoise.unused.*"]

[tool.setuptools_scm]
fallback_version = "0.0.0"
write_to = "msnoise/_version.py"